@@ -131,6 +131,7 @@ OBJS=\
 	oss.o \
 	clocks.o \
 	fonts.o \
+	tzx.o \
 	video/video.o \
 	vortex/levels.o \
 	vortex/vortex.o \
