@@ -1,3 +1,6 @@
+Matthew Westcott - Sun Jun 5 2005
+	Added TZX (speecy cart) playback
+
 Adam Johnston - Sun Jun  5 2005
 	Added basic uncompressed video playback
 
